[project]
name = "pulse-agent"
version = "0.5.5"
description = "Autonomous cognition engine for OpenClaw agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Iris", email = "iris@iamiris.ai"},
    {name = "Josh"},
]
keywords = ["openclaw", "ai", "agent", "consciousness", "autonomous", "nervous-system", "emotions", "memory"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiohttp>=3.9",
    "pyyaml>=6.0.1",
    "requests>=2.31",
    "watchdog>=4.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
observation = [
    "fastapi>=0.110",
    "uvicorn>=0.28",
    "httpx>=0.27",  # required by fastapi TestClient
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0.0",
    "fastapi>=0.110",
    "uvicorn>=0.28",
    "httpx>=0.27",
    "black>=24.0",
    "flake8>=7.0.0",
    "build>=1.2.0",
    "twine>=5.0.0",
]


[project.scripts]
# Main CLI entrypoint (pulse init/status/doctor/...)
pulse = "pulse.src.cli:main"

# Daemon entrypoint (equivalent to `python3 -m pulse`)
pulse-daemon = "pulse.src.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "pulse*"]


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]
